update for new IL and support CachedHardware